--- a/src/components/Main/Profile/About/About.css
+++ b/src/components/Main/Profile/About/About.css
@@ -74,7 +74,8 @@
 .profile__expbox {
   display: flex;
   flex-direction: column;
-  width: 8rem;
+  width: 100%;
+  max-width: 8rem;
   gap: 0.3rem;
   align-items: center;
   border-radius: 0.5rem;
